--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://gitlab.com/kalenyk1/vvp-ui-lib#README",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-clean-css": "^3.9.2",
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
