--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "gulp": "^3.9.1",
     "gulp-clean-css": "^3.9.2",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "^3.1.0"
   },
   "dependencies": {
